@@ -1432,11 +1432,11 @@ NEWLINE ("\r"|"\n"|"\r\n")
 	yymore();
 }
 
-<ST_ONE_LINE_COMMENT>"?"|"%"|">" {
+<ST_ONE_LINE_COMMENT>"?"|"%"|">"|"<" {
 	yymore();
 }
 
-<ST_ONE_LINE_COMMENT>[^\n\r?%>]+ {
+<ST_ONE_LINE_COMMENT>[^\n\r?%><]+ {
 	yymore();
 }
 
@@ -1446,6 +1446,15 @@ NEWLINE ("\r"|"\n"|"\r\n")
 	zendlval->type = IS_STRING;
 	BEGIN(ST_IN_SCRIPTING);
 	CG(zend_lineno)++;
+	return T_COMMENT;
+}
+
+<ST_ONE_LINE_COMMENT>"</script>" {
+	zendlval->value.str.val = yytext; /* no copying - intentional */
+	zendlval->value.str.len = yyleng;
+	zendlval->type = IS_STRING;
+	yyless(yyleng-9);
+	BEGIN(ST_IN_SCRIPTING);
 	return T_COMMENT;
 }
 
@@ -1497,7 +1506,7 @@ NEWLINE ("\r"|"\n"|"\r\n")
 	yymore();
 }
 
-<ST_IN_SCRIPTING>("?>"|"</script"{WHITESPACE}*">"){NEWLINE}? {
+<ST_IN_SCRIPTING>("?>"|"</script>"){NEWLINE}? {
 	zendlval->value.str.val = yytext; /* no copying - intentional */
 	zendlval->value.str.len = yyleng;
 	zendlval->type = IS_STRING;
